added style sheet red box

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Advanced Github and Deploymen</title>
   </head>
-  <body></body>
+  <body>
+    <div></div>
+  </body>
 </html>
